# q2asm

./: .gitignore  Cargo.toml  dupa.asm  instr_set.toml  instr_set.yaml
src/: config.rs  loader.rs  main.rs
src/docs/: generator.rs  mod.rs
src/docs/components/: hello.rs  instruction_set.rs  mod.rs
src/processor/: interpreter.rs  mod.rs  preprocessor.rs
templates/: instruction_set.stpl
