[package]
name = "q2asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.140"
serde_derive = "1.0.140"
toml = "0.5.9"
parse_int = "0.6.0"
sailfish = "0.4.0"
clap = { version = "3.2.16", features = ["derive"] }
